--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 bytes = "1.1"
+quick-xml = { version = "0.22", features = ["serialize"] }
 
 [dev-dependencies]
 mockito = "0.30"
