--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 bytes = "1.1"
 quick-xml = { version = "0.22", features = ["serialize"] }
+thiserror = "1.0"
 
 [dev-dependencies]
 mockito = "0.30"
